--- a/Developpement/static/styles/css/autre/mdpOubli.css
+++ b/Developpement/static/styles/css/autre/mdpOubli.css
@@ -6,6 +6,9 @@
   border-color: black;
   border-style: solid;
   border-width: thin;
+  border-color: black;
+  border-style: solid;
+  border-width: thin;
   width: 60%;
   margin-left: 20%;
   margin-bottom: 2%;
