--- a/Developpement/static/styles/css/contact/plaquette.css
+++ b/Developpement/static/styles/css/contact/plaquette.css
@@ -19,6 +19,9 @@
 
 .center{
   background-color: #fafdef;
+  border-color: black;
+  border-style: solid;
+  border-width: thin;
   width: 90%;
   margin-left: 5%;
   margin-bottom: 5%;
