--- a/Developpement/static/styles/css/stage/stage_programmes.css
+++ b/Developpement/static/styles/css/stage/stage_programmes.css
@@ -4,6 +4,9 @@
 .contain-p-down{
   padding:3%;
   background-color: #fafdef;
+  border-color: black;
+  border-style: solid;
+  border-width: thin;
   width: 90%;
   margin-left: 5%;
   text-align: justify;
