--- a/Developpement/templates/administration/administration_gestionFichiers_images.html
+++ b/Developpement/templates/administration/administration_gestionFichiers_images.html
@@ -47,12 +47,9 @@
           </tr>
         </tbody>
       </table>
-      <div id="end">
-        <p class="texte">Ajouter une image :</p>
-        <span id="plus" class="btn btn-info fileinput-button">
-            <i class="glyphicon glyphicon-plus"></i>
-            <input id="fileupload" type="file" name="files[]" multiple="">
-        </span>
-      </div>
+      <input type="file" id="file1">
+      <button type="button" class="btn btn-default">
+        <i id="ajout" class="icon-upload icon-white"></i> Ajouter
+      </button>
   </div>
 {% endblock %}
