--- a/Developpement/templates/other/connexion.html
+++ b/Developpement/templates/other/connexion.html
@@ -16,11 +16,11 @@
   <div id="contain-div">
   <div class="form-group">
     <label for="username" class="col-sm-3 control-label">Pseudo</label>
-    <div class="col-sm-3">{{ connectForm.username(size=50, class_="form-control", placeholder="Nom d'utilisateur") }}</div>
+    <div class="col-sm-3 clique">{{ connectForm.username(size=50, class_="form-control", placeholder="Nom d'utilisateur") }}</div>
   </div>
   <div class="form-group">
     <label for="password" class="col-sm-3 control-label">Mot de passe</label>
-    <div class="col-sm-3">{{ connectForm.password(size=50, class_="form-control", placeholder="Mot de passe") }}</div>
+    <div class="col-sm-3 clique">{{ connectForm.password(size=50, class_="form-control", placeholder="Mot de passe") }}</div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-3 col-sm-3">
