--- a/Developpement/static/styles/css/quatuor/quatuor_extrait.css
+++ b/Developpement/static/styles/css/quatuor/quatuor_extrait.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   background-color: #fafdef;
+  border-color: black;
+  border-style: solid;
   width: 90%;
   text-align: center;
   margin-left: 5%;
