--- a/Developpement/static/styles/css/quatuor/quatuor_presse.css
+++ b/Developpement/static/styles/css/quatuor/quatuor_presse.css
@@ -14,6 +14,9 @@ width: 100%;
 }
 .contain-img-text{
   background-color: #fafdef;
+  border-color: black;
+  border-style: solid;
+  border-width: thin;
   margin-top: 5%;
   border-radius: 5%;
   width:120%;
