--- a/Developpement/static/styles/css/stage/stage_inscription.css
+++ b/Developpement/static/styles/css/stage/stage_inscription.css
@@ -54,6 +54,9 @@ label{
 }
 #contain-stagiaire{
     background-color: #fafdef;
+    border-color: black;
+    border-style: solid;
+    border-width: thin;
     padding: 3%;
     width: 80%;
     margin-left: 10%;
