--- a/Developpement/static/styles/css/stage/stage_inscription_compte.css
+++ b/Developpement/static/styles/css/stage/stage_inscription_compte.css
@@ -6,6 +6,9 @@
   margin-left: 10%;
   text-align: center;
   background-color: #fbfcef;
+  border-color: black;
+  border-style: solid;
+  border-width: thin;
 }
 h3,h4{
   text-align: center;
